# ai-qa-framework

./: .env.example  .gitignore  README.md  dashboard.html  pyproject.toml  report.html  requirements.txt  results.json
.github/workflows/: qa-management.yml  tests.yml
config/: quality_gates.yaml
requirements/: core_requirements.yaml
scenarios/: core_scenarios.yaml
src/: llm_client.py
src/dashboard/: generate.py
src/quality/: __init__.py  reporting.py  scenario_runner.py  specs.py
tests/: conftest.py  scenario_helpers.py  test_bias.py  test_consistency.py  test_hallucination.py  test_llm_client_unit.py  test_performance.py  test_quality_specs.py  test_rag.py  test_rag_scenarios.py  test_reporting_unit.py  test_scenario_runner_unit.py  test_security.py  test_traceability_contract.py  test_ui.py  ui_selectors.py
