[project]
name = "ai-qa-framework"
version = "0.1.0"
description = "Automated testing framework for evaluating LLM outputs in production environments"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Christoph Lengowski"},
]
dependencies = [
    "anthropic>=0.18.0",
    "pytest>=8.0.0",
    "pytest-html>=4.1.1",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "security: Security-related tests (prompt injection, data leakage)",
    "consistency: Output consistency and stability tests",
    "hallucination: Hallucination detection tests",
    "performance: Performance and latency tests",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
